--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Home
 Hi, I am a Ph.D. scholar at International Max Plank Research School on Intelligent Systems (IMPRS-IS) and the Human Computer Interaction and Cognitive Systems (HCI CS) group at the University of Stuttgart, Germany. 
 My work aims to improve human-AI cooperation by investigating the intersection of Machine Theory of Mind and Multi-Agent Reinforcement Learning.
 
-You can find more about me or my work in the <a href="{{ site.baseurl }}about">about page</a>, on our groups <a href="https://www.perceptualui.org/people/ruhdorfer/">website</a>, or on <a href="https://scholar.google.de/citations?user=Bb4aplwAAAAJ&hl=de">google scholar</a>.
+You can find more about me or my work on the <a href="{{ site.baseurl }}about">about page</a>, on our <a href="https://www.perceptualui.org/people/ruhdorfer/">groups website</a>, or on <a href="https://scholar.google.de/citations?user=Bb4aplwAAAAJ&hl=de">google scholar</a>.
 For students interested in a project or thesis please check the <a href="https://www.perceptualui.org/teaching/open-projects/">open thesis page</a> (only accessible from within the universities network).
 
 <hr />
