--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@ To this day I was or am involved in supervising a total of 3 students in their M
 
 <ul>
   <li><b>2024</b>: I help with the organization of the ELLIS Distinguished Lecture Series at the <a href="https://ellis-stuttgart.eu">ELLIS Unit Stuttgart</a>.</li>
+  <li><b>2024</b>: I have been accepted to the 2024 ELLIS summer school on Collaborative and Generative AI <a href="https://fcai.fi/ellis-summer-school-2024/home">(CoGenAI)</a> at Aalto University, Helsinki, Finnland.</li>
 </ul>
 
 <hr />
