--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ For students interested in a project or thesis please check the <a href="https:/
 For details please refer to <a href="https://www.perceptualui.org/teaching/">here</a>.
 
 <ul>
-  <li><b>2024 (winter)</b>: Mediainformatics (Organizer, Tutor and Lecturer) (Bachelor level course)</li>
+  <li><b>2024 (winter)</b>: Mediainformatics (Organizer and Tutor) (Bachelor level course)</li>
   <li><b>2024 (summer)</b>: Computational Theory of Mind and Cognition (Organizer, Tutor and Lecturer) (Master level practical course)</li>
   <li><b>2024 (summer)</b>: Human Computer Interaction (Tutor) (Bachelor level lecture)</li>
   <li><b>2023 (winter)</b>: Machine Perception and Learning (Tutor) (Master level lecture)</li>
