--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ Next to Andreas Bulling, Prof. Dr. Georg Martius (<a href="https://is.mpg.de/per
 My work aims to improve human-AI cooperation by investigating the intersection of several different research fields, including MARL, Computational Theory of Mind, Zero-Shot Cooperation and Open-endedness:
 <ol>
   <li>I reasearch the intersection between partner and map generalisation, i.e. in <a href="https://arxiv.org/abs/2406.17949">The Overcooked Generalisation Challenge.</a>.</li>
-  <li>I research how computational Theory of Mind and Multi-Agent Reinforcement Learning can be combined to improve zero-shot huamn-AI cooperation.</li>
+  <li>I research how computational Theory of Mind and Multi-Agent Reinforcement Learning can be combined to improve zero-shot human-AI cooperation.</li>
   <li>I try to adress how open-ended learning is connected to learning Theory of Mind in artificial agents.</li>
 </ol>
 
