--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@ title: Home
 Hi, I am a Ph.D. candidate and research associate in the <a href="https://www.collaborative-ai.org/">Collaborative Artificial Intelligence (CAI)</a> group under the supervision of <a href="https://www.collaborative-ai.org/people/bulling/">Prof. Dr. Andreas Bulling</a> at the <a href="https://www.uni-stuttgart.de">University of Stuttgart</a>, Germany and a Ph.D. scholar at the <a href="https://imprs.is.mpg.de"> International Max Planck Research School for Intelligent Systems (IMPRS-IS)</a>. 
 Next to Andreas Bulling, Prof. Dr. Georg Martius (<a href="https://is.mpg.de/person/gmartius">Max Planck Institute for Intelliegent Systems</a>, <a href="https://uni-tuebingen.de/fakultaeten/mathematisch-naturwissenschaftliche-fakultaet/fachbereiche/informatik/lehrstuehle/distributed-intelligence/team/prof-dr-georg-martius/">University of Tübingen</a>) and Dr. Charley Wu (<a href="https://uni-tuebingen.de/en/research/core-research/cluster-of-excellence-machine-learning/research/research/cluster-research-groups/research-groups/human-and-machine-cognition/">University of Tübingen</a>) are part of my IMPRS-IS Thesis Advisory Committee. 
 
-
-I work on cooperative AI.
-Specifically, my work aims to improve cooperative AI with a focus on human-AI cooperation by investigating the intersection of multi-agent Reinforcement Learning, computational Theory of Mind, and ad-hoc teamwork.
+<br>
+I research cooperative AI with a focus on social reasoning and generalisation.
+Specifically, in my work aims I investigate the intersection of multi-agent Reinforcement Learning, computational Theory of Mind, and ad-hoc teamwork.
 I specifically focus on hard generalisation problems in open-ended learning:
 <ol>
   <li>I reasearch the intersection between partner and map generalisation, i.e. in <a href="https://arxiv.org/abs/2406.17949">The Overcooked Generalisation Challenge</a>.</li>
