--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@ Next to Andreas Bulling, Prof. Dr. Georg Martius (<a href="https://is.mpg.de/per
 
 <br>
 I research cooperative AI with a focus on social reasoning and generalisation.
-Specifically, in my work aims I investigate the intersection of multi-agent Reinforcement Learning, computational Theory of Mind, and ad-hoc teamwork.
-I specifically focus on hard generalisation problems in open-ended learning:
+Specifically, in my work I investigate the intersection of multi-agent Reinforcement Learning, computational Theory of Mind, and ad-hoc teamwork.
+I specifically focus on hard generalisation problems in open-ended learning with unknown partners:
 <ol>
   <li>I reasearch the intersection between partner and map generalisation, i.e. in <a href="https://arxiv.org/abs/2406.17949">The Overcooked Generalisation Challenge</a>.</li>
   <li>I research how computational Theory of Mind and Multi-Agent Reinforcement Learning can be combined to improve zero-shot human-AI cooperation.</li>
