--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@ Next to Andreas Bulling, Prof. Dr. Georg Martius (<a href="https://is.mpg.de/per
 <br>
 <hr>
 I research cooperative AI with a focus on social reasoning and generalisation.
-Specifically, in my work I investigate the intersection of multi-agent Reinforcement Learning, computational Theory of Mind, and ad-hoc teamwork.
-I specifically focus on hard generalisation problems in open-ended learning with unknown partners:
+Specifically, in my work I investigate the intersection of multi-agent Reinforcement Learning, ad-hoc teamwork and Theory of Mind.
+My long-term goal is to train agents capable of ad-hoc teamwork with diverse partners in unknown, open-ended environments.
+Among other things I research ...
 <ol>
-  <li>I reasearch the intersection between partner and map generalisation, i.e. in <a href="https://arxiv.org/abs/2406.17949">The Overcooked Generalisation Challenge</a>.</li>
-  <li>I research how computational Theory of Mind and Multi-Agent Reinforcement Learning can be combined to improve zero-shot human-AI cooperation.</li>
-  <li>I try to adress how open-ended learning is connected to learning Theory of Mind in artificial agents.</li>
+  <li>... the intersection between partner and environment generalisation, i.e. in <a href="https://arxiv.org/abs/2406.17949">The Overcooked Generalisation Challenge</a> we propose a challange in which agents need to cooperate with novel partners in novel environments and in <a href="https://arxiv.org/abs/2508.06336">UPD</a> we propose a solution to the problem.</li>
+  <li>... how computational Theory of Mind can be used to improve human-AI cooperation, e.g. in the <a href="https://arxiv.org/abs/2508.12480">Yokai Learning Environment</a> or in our works on LLMs and their Theory of Mind capabilities (e.g. <a href="https://www.arxiv.org/abs/2509.05066">1</a>, <a href="https://arxiv.org/abs/2406.17513">2</a>)</li>
 </ol>
 
 You can find more about me or my work on the <a href="{{ site.baseurl }}about">about page</a>, on our <a href="https://www.collaborative-ai.org/people/ruhdorfer/">groups website</a>, or on <a href="https://scholar.google.de/citations?user=Bb4aplwAAAAJ&hl=de">google scholar</a>.
