--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@ My IMPRS-IS Thesis Advisory Committee includes Prof. Dr. Georg Martius (<a href=
 
 <br>
 <hr>
-I research cooperative AI with a focus on social reasoning and generalisation.
-Specifically, I work on multi-agent Reinforcement Learning, Ad-Hoc Teamwork, Large Language Models and Theory of Mind with a focus on cooperative tasks.
+I research cooperative AI with a focus on social reasoning and generalisation. 
+Specifically, I work on multi-agent reinforcement learning (MARL), ad-hoc teamwork, large language models (LLMs), and Theory of Mind (ToM) in cooperative tasks. 
 My long-term goal is to train agents capable of ad-hoc teamwork with diverse partners in unknown, open-ended environments.
 
 Among other things I research ...
 <ol>
-  <li>... the intersection between partner and environment generalisation, i.e. in <a href="https://arxiv.org/abs/2406.17949">The Overcooked Generalisation Challenge</a> we propose a challange in which agents need to cooperate with novel partners in novel environments and in <a href="https://arxiv.org/abs/2508.06336">UPD</a> we propose a solution to the problem.</li>
-  <li>... how computational Theory of Mind can be used to improve human-AI cooperation, e.g. in the <a href="https://arxiv.org/abs/2508.12480">Yokai Learning Environment</a> or in our works on LLMs and their Theory of Mind capabilities (e.g. <a href="https://www.arxiv.org/abs/2509.05066">1</a>, <a href="https://arxiv.org/abs/2406.17513">2</a>).</li>
+  <li>... the intersection between partner and environment generalisation. In <a href="https://arxiv.org/abs/2406.17949">The Overcooked Generalisation Challenge</a> we introduced a benchmark where agents must cooperate with novel partners in unknown environments. 
+    In <a href="https://arxiv.org/abs/2508.06336">Unsupervised Partner Design (UPD)</a>, we proposed a method addressing this challenge.</li>
+  <li>... how computational Theory of Mind can be used to improve human-AI cooperation. In the <a href="https://arxiv.org/abs/2508.12480">Yokai Learning Environment</a> we introduced a new benchmark for social reasoning, and in our work on LLMs we evaluated their Theory of Mind capabilities (e.g. <a href="https://www.arxiv.org/abs/2509.05066">1</a>, <a href="https://arxiv.org/abs/2406.17513">2</a>).</li>
 </ol>
 
 You can find more about me or my work on the <a href="{{ site.baseurl }}about">about page</a>, on our <a href="https://www.collaborative-ai.org/people/ruhdorfer/">groups website</a>, or on <a href="https://scholar.google.de/citations?user=Bb4aplwAAAAJ&hl=de">google scholar</a>.
