--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ Among other things I research ...
 <ol>
   <li>... the intersection between partner and environment generalisation. In <a href="https://arxiv.org/abs/2406.17949">The Overcooked Generalisation Challenge</a> we introduced a benchmark where agents must cooperate with novel partners in unknown environments. 
     In <a href="https://arxiv.org/abs/2508.06336">Unsupervised Partner Design (UPD)</a>, we proposed a method addressing this challenge.</li>
-  <li>... how computational Theory of Mind can be used to improve human-AI cooperation. In the <a href="https://arxiv.org/abs/2508.12480">Yokai Learning Environment</a> we introduced a new benchmark for social reasoning, and in our work on LLMs we evaluated their Theory of Mind capabilities (e.g. <a href="https://www.arxiv.org/abs/2509.05066">1</a>, <a href="https://arxiv.org/abs/2406.17513">2</a>).</li>
+  <li>... how computational Theory of Mind can be used to improve human-AI cooperation. In the <a href="https://arxiv.org/abs/2508.12480">Yokai Learning Environment</a> we introduced a new zero-shot coordination benchmark for social reasoning, and in our work on LLMs we evaluated their Theory of Mind capabilities (e.g. <a href="https://www.arxiv.org/abs/2509.05066">1</a>, <a href="https://arxiv.org/abs/2406.17513">2</a>).</li>
 </ol>
 
 You can find more about me or my work on the <a href="{{ site.baseurl }}about">about page</a>, on our <a href="https://www.collaborative-ai.org/people/ruhdorfer/">groups website</a>, or on <a href="https://scholar.google.de/citations?user=Bb4aplwAAAAJ&hl=de">google scholar</a>.
