--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ I sometimes collaborate with others to work on topics not related to my core res
 <ul>
   <li><b>2026:</b> Attended the <a href="https://www.wim.uni-mannheim.de/doering/conferences/rl-2026/">Mannheim Workshop on Reinforcement Learning</a> in February in Mannheim, Germany.</li>
   <li><b>2025:</b> Attended <a href="https://euro-workshop-on-reinforcement-learning.github.io/ewrl18/">EWRL 2025</a> in September in Tübingen, Germany.</li>
+  <li><b>2025:</b> Attended the IMPRS-IS 2025 Bootcamp in Tübingen and Stuttgart, Germany and presented a poster about my paper: <i>Unsupervised Partner Design Enables Robust Ad-Hoc Teamwork</i>.</li>
   <li><b>2025:</b> Gave a talk at the <a href="https://tomworkshop.github.io">IJCAI ToM Workshop</a> held in Montral, Canada.</li>
   <li><b>2025:</b> Accepted into the <a href="https://www.cooperativeai.com/summer-school/summer-school-2025">2025 Cooperative AI Foundation Summer School</a> in Marlow, UK. </li>
   <li><b>2024:</b> Attended the <a href="https://imprs.is.mpg.de/events/imprs-is-boot-camp">IMPRS-IS 2024 Bootcamp</a> in Sonthofen, Germany and presented a poster about my paper: <i>The Overcooked Generalisation Challenge</i>.</li>
